--- a/avg_spectrograms/avg_spectrograms.ipynb
+++ b/avg_spectrograms/avg_spectrograms.ipynb
@@ -30,11 +30,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds = xr.open_dataset('SKR_poly_flux/poly_flux_combined.ncdf', engine='netcdf4')  # This file is all the masked polygon flux from all years combined together, yearly files generated from get_polygon_flux.ipynb\n",
+    "ds = xr.open_dataset('../data/calculated/SKR_poly_flux/poly_flux_combined.ncdf', engine='netcdf4')  # This file is all the masked polygon flux from all years combined together, yearly files generated from get_polygon_flux.ipynb\n",
     "ds = ds.rename({'__xarray_dataarray_variable__': 'flux'})  # Rename flux values to flux"
    ]
   },
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +624,7 @@
     }
    ],
    "source": [
-    "df_ephemeris = pd.read_csv('Cassini_Saturn_SKR_Data/20040101000000_20170915115700_ephemeris.csv')\n",
+    "df_ephemeris = pd.read_csv('../data/raw/20040101000000_20170915115700_ephemeris.csv')\n",
     "df_ephemeris = df_ephemeris.rename(columns={'datetime': 'Universal Time'})  # Rename datetime column to Universal Time\n",
     "df_ephemeris[\"Universal Time\"] = df_ephemeris[\"Universal Time\"].astype('datetime64[ns]')  # Convert time values to datetime64 for merging\n",
     "df_ephemeris"
