--- a/avg_spectrograms/avg_spectrograms_all_data.ipynb
+++ b/avg_spectrograms/avg_spectrograms_all_data.ipynb
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +639,7 @@
     }
    ],
    "source": [
-    "df_ephemeris = pd.read_csv('Cassini_Saturn_SKR_Data/20040101000000_20170915115700_ephemeris.csv')\n",
+    "df_ephemeris = pd.read_csv('../data/raw/20040101000000_20170915115700_ephemeris.csv')\n",
     "df_ephemeris = df_ephemeris.rename(columns={'datetime': 'Universal Time'})  # Rename datetime column to Universal Time\n",
     "df_ephemeris[\"Universal Time\"] = df_ephemeris[\"Universal Time\"].astype('datetime64[ns]')  # Convert time values to datetime64 for merging\n",
     "df_ephemeris"
