--- a/avg_spectrograms/get_polygon_flux.ipynb
+++ b/avg_spectrograms/get_polygon_flux.ipynb
@@ -23,7 +23,7 @@
     "from tfcat import TFCat\n",
     "\n",
     "from tqdm import tqdm\n",
-    "from multiprocess import Pool\n",
+    "from multiprocess import Pool  # Change 'multiprocess' to 'multiprocessing' if given an error\n",
     "\n",
     "from lfe_func import get_sav_data, get_poly_coords"
    ]
@@ -122,7 +122,7 @@
     "\n",
     "    da = xr.DataArray(masked_flux, dims=['frequency', 'time'], coords= {'frequency': (['frequency'], freq),'time':(['time'], time)})\n",
     "\n",
-    "    da.to_netcdf(f'SKR_poly_flux/poly_flux_{year}.ncdf')"
+    "    da.to_netcdf(f'../data/calculated/SKR_poly_flux/poly_flux_{year}.ncdf')"
    ]
   }
  ],
