Adapt config.ini in the codebase

--- a/avg_spectrograms/avg_spectrograms.ipynb
+++ b/avg_spectrograms/avg_spectrograms.ipynb
@@ -9,16 +9,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import configparser\n",
+    "\n",
     "import numpy as np\n",
     "import xarray as xr\n",
     "import pandas as pd\n",
     "\n",
     "import matplotlib.colors as mp_colors\n",
     "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config = configparser.ConfigParser()\n",
+    "config.read('config.ini')\n",
+    "skr_poly_flux_all_fp = config['filepaths']['skr_poly_flux_all']\n",
+    "ephemeris_fp = config['filepaths']['ephemeris']"
    ]
   },
   {
@@ -34,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds = xr.open_dataset('../data/calculated/SKR_poly_flux/poly_flux_combined.ncdf', engine='netcdf4')  # This file is all the masked polygon flux from all years combined together, yearly files generated from get_polygon_flux.ipynb\n",
+    "ds = xr.open_dataset(skr_poly_flux_all_fp, engine='netcdf4')  # This file is all the masked polygon flux from all years combined together, yearly files generated from get_polygon_flux.ipynb\n",
     "ds = ds.rename({'__xarray_dataarray_variable__': 'flux'})  # Rename flux values to flux"
    ]
   },
@@ -624,7 +638,7 @@
     }
    ],
    "source": [
-    "df_ephemeris = pd.read_csv('../data/raw/20040101000000_20170915115700_ephemeris.csv')\n",
+    "df_ephemeris = pd.read_csv(ephemeris_fp)\n",
     "df_ephemeris = df_ephemeris.rename(columns={'datetime': 'Universal Time'})  # Rename datetime column to Universal Time\n",
     "df_ephemeris[\"Universal Time\"] = df_ephemeris[\"Universal Time\"].astype('datetime64[ns]')  # Convert time values to datetime64 for merging\n",
     "df_ephemeris"
