--- a/avg_spectrograms/avg_spectrograms_all_data.ipynb
+++ b/avg_spectrograms/avg_spectrograms_all_data.ipynb
@@ -9,21 +9,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import configparser\n",
+    "\n",
     "import numpy as np\n",
     "import xarray as xr\n",
     "import pandas as pd\n",
     "\n",
     "from tfcat import TFCat\n",
     "\n",
-    "from lfe_func import get_sav_data\n",
-    "\n",
     "import matplotlib.colors as mp_colors\n",
     "import matplotlib.pyplot as plt\n",
-    "import matplotlib.dates as mdates"
+    "import matplotlib.dates as mdates\n",
+    "\n",
+    "from lfe_func import get_sav_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config = configparser.ConfigParser()\n",
+    "config.read('config.ini')\n",
+    "ephemeris_fp = config['filepaths']['ephemeris']"
    ]
   },
   {
@@ -639,7 +652,7 @@
     }
    ],
    "source": [
-    "df_ephemeris = pd.read_csv('../data/raw/20040101000000_20170915115700_ephemeris.csv')\n",
+    "df_ephemeris = pd.read_csv(ephemeris_fp)\n",
     "df_ephemeris = df_ephemeris.rename(columns={'datetime': 'Universal Time'})  # Rename datetime column to Universal Time\n",
     "df_ephemeris[\"Universal Time\"] = df_ephemeris[\"Universal Time\"].astype('datetime64[ns]')  # Convert time values to datetime64 for merging\n",
     "df_ephemeris"
