--- a/2D_phase_maps/2d_phase_maps.ipynb
+++ b/2D_phase_maps/2d_phase_maps.ipynb
@@ -2,10 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import configparser\n",
+    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
@@ -90,7 +92,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config = configparser.ConfigParser()\n",
+    "config.read('config.ini')\n",
+    "joined_lfes_fp = config['filepaths']['joined_lfes']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +374,7 @@
    ],
    "source": [
     "# Import lfe data and clear nans\n",
-    "lfes = pd.read_csv('Cassini_Saturn_SKR_Data/Joined_LFEs_w_phases.csv', usecols=['start', 'end', 'duration', 'subLST', 'subLat', 'Range', 'x_ksm', 'y_ksm', 'z_ksm', 'north phase', 'south phase'])\n",
+    "lfes = pd.read_csv(joined_lfes_fp, usecols=['start', 'end', 'duration', 'subLST', 'subLat', 'Range', 'x_ksm', 'y_ksm', 'z_ksm', 'north phase', 'south phase'])\n",
     "lfes = lfes.dropna().reset_index(drop=True)\n",
     "\n",
     "# Sort data in north/south bins\n",
