--- a/avg_spectrograms/get_polygon_flux.ipynb
+++ b/avg_spectrograms/get_polygon_flux.ipynb
@@ -14,6 +14,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import configparser\n",
+    "\n",
     "import numpy as np\n",
     "import xarray as xr\n",
     "\n",
@@ -29,6 +31,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config = configparser.ConfigParser()\n",
+    "config.read('config.ini')\n",
+    "unet_catalogue_fp = config['filepaths']['unet_catalogue']\n",
+    "skr_poly_flux_fp = config['folderpaths']['skr_poly_flux']"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -41,8 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_catalogue = 'Cassini_Saturn_SKR_Data/2004001_2017258_catalogue.json'\n",
-    "catalogue = TFCat.from_file(file_catalogue)\n",
+    "catalogue = TFCat.from_file(unet_catalogue_fp)\n",
     "\n",
     "poly_tf_list = []\n",
     "for i in range(4874):\n",
@@ -122,7 +135,7 @@
     "\n",
     "    da = xr.DataArray(masked_flux, dims=['frequency', 'time'], coords= {'frequency': (['frequency'], freq),'time':(['time'], time)})\n",
     "\n",
-    "    da.to_netcdf(f'../data/calculated/SKR_poly_flux/poly_flux_{year}.ncdf')"
+    "    da.to_netcdf(skr_poly_flux_fp + f'/poly_flux_{year}.ncdf')"
    ]
   }
  ],
