update readme and slight restructuration

--- a/avg_spectrograms/avg_spectrograms.ipynb
+++ b/avg_spectrograms/avg_spectrograms.ipynb
@@ -30,7 +30,7 @@
    "outputs": [],
    "source": [
     "config = configparser.ConfigParser()\n",
-    "config.read('config.ini')\n",
+    "config.read('../config.ini')\n",
     "skr_poly_flux_all_fp = config['filepaths']['skr_poly_flux_all']\n",
     "ephemeris_fp = config['filepaths']['ephemeris']"
    ]
