--- a/2D_phase_maps/2d_phase_maps.ipynb
+++ b/2D_phase_maps/2d_phase_maps.ipynb
@@ -97,7 +97,7 @@
    "outputs": [],
    "source": [
     "config = configparser.ConfigParser()\n",
-    "config.read('config.ini')\n",
+    "config.read('../config.ini')\n",
     "joined_lfes_fp = config['filepaths']['joined_lfes']"
    ]
   },
