--- a/avg_spectrograms/avg_spectrograms_all_data.ipynb
+++ b/avg_spectrograms/avg_spectrograms_all_data.ipynb
@@ -35,7 +35,7 @@
    "outputs": [],
    "source": [
     "config = configparser.ConfigParser()\n",
-    "config.read('config.ini')\n",
+    "config.read('../config.ini')\n",
     "ephemeris_fp = config['filepaths']['ephemeris']"
    ]
   },
