--- a/avg_spectrograms/get_polygon_flux.ipynb
+++ b/avg_spectrograms/get_polygon_flux.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,12 +32,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "config = configparser.ConfigParser()\n",
-    "config.read('config.ini')\n",
+    "config.read('../config.ini')\n",
     "unet_catalogue_fp = config['filepaths']['unet_catalogue']\n",
     "skr_poly_flux_fp = config['folderpaths']['skr_poly_flux']"
    ]
@@ -66,6 +66,59 @@
     "    poly_tf = np.array([mdates.date2num(poly_time), poly_freq]).T\n",
     "\n",
     "    poly_tf_list.append(poly_tf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'s': array([[0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        ...,\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.]], shape=(48, 175680), dtype='>f8'),\n",
+       " 'p': array([[0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        ...,\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.]], shape=(48, 175680), dtype='>f8'),\n",
+       " 'v': array([[0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        ...,\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.]], shape=(48, 175680), dtype='>f4'),\n",
+       " 't': array([2557.        , 2557.00208333, 2557.00416667, ..., 2922.99375   ,\n",
+       "        2922.99583333, 2922.99791667], shape=(175680,), dtype='>f8'),\n",
+       " 'f': array([   3.9548,    4.7729,    5.7601,    6.9516,    8.3895,   10.1248,\n",
+       "          12.2191,   14.7465,   17.7968,   21.4779,   25.9205,   31.2821,\n",
+       "          37.7526,   45.5616,   54.9858,   66.3593,   80.0854,   96.6507,\n",
+       "         116.6424,  140.7693,  169.8868,  205.027 ,  247.4359,  298.6168,\n",
+       "         350.    ,  400.    ,  450.    ,  500.    ,  550.    ,  600.    ,\n",
+       "         650.    ,  700.    ,  750.    ,  800.    ,  850.    ,  900.    ,\n",
+       "         950.    , 1000.    , 1050.    , 1100.    , 1150.    , 1200.    ,\n",
+       "        1250.    , 1300.    , 1350.    , 1400.    , 1450.    , 1500.    ],\n",
+       "       dtype='>f4')}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from scipy.io import readsav\n",
+    "\n",
+    "readsav('/Users/nathan/Documents/Code/Saturn_LFEs/data/raw/SKR_raw/SKR_2004_CJ.sav')"
    ]
   },
   {
@@ -141,7 +194,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "LFE_statistics",
+   "display_name": "Saturn_LFEs",
    "language": "python",
    "name": "python3"
   },
@@ -155,7 +208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
