--- a/fig_avg_spectrograms/avg_spectrograms_all_data.ipynb
+++ b/fig_avg_spectrograms/avg_spectrograms_all_data.ipynb
@@ -13,8 +13,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import configparser\n",
-    "\n",
     "import numpy as np\n",
     "import xarray as xr\n",
     "import pandas as pd\n",
@@ -34,9 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config = configparser.ConfigParser()\n",
-    "config.read('../config.ini')\n",
-    "ephemeris_fp = config['filepaths']['ephemeris']"
+    "ephemeris_fp = '../data/calculated/20040101000000_20170915115700_ephemeris.csv'"
    ]
   },
   {
