Fixed missing import

--- a/fig_avg_spectrograms/avg_spectrograms_all_data.ipynb
+++ b/fig_avg_spectrograms/avg_spectrograms_all_data.ipynb
@@ -9,13 +9,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import xarray as xr\n",
     "import pandas as pd\n",
+    "\n",
+    "import xarray as xr\n",
+    "from scipy.io import readsav\n",
     "\n",
     "from tfcat import TFCat\n",
     "\n",
@@ -26,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +473,7 @@
        "[2403360 rows x 49 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,214 +493,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>datetime</th>\n",
-       "      <th>Universal Time</th>\n",
-       "      <th>x_ksm</th>\n",
-       "      <th>y_ksm</th>\n",
-       "      <th>z_ksm</th>\n",
-       "      <th>subLat</th>\n",
-       "      <th>subLon</th>\n",
-       "      <th>subLST</th>\n",
-       "      <th>R_ksm</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>2004-01-01 00:00:00</td>\n",
-       "      <td>664.545415</td>\n",
-       "      <td>-1282.271820</td>\n",
-       "      <td>-134.013894</td>\n",
-       "      <td>-19.815933</td>\n",
-       "      <td>78.646614</td>\n",
-       "      <td>7.525833</td>\n",
-       "      <td>1450.448673</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2004-01-01 00:01:00</td>\n",
-       "      <td>664.542412</td>\n",
-       "      <td>-1282.267682</td>\n",
-       "      <td>-134.011330</td>\n",
-       "      <td>-19.815933</td>\n",
-       "      <td>79.209665</td>\n",
-       "      <td>7.525833</td>\n",
-       "      <td>1450.443402</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2004-01-01 00:02:00</td>\n",
-       "      <td>664.539410</td>\n",
-       "      <td>-1282.263543</td>\n",
-       "      <td>-134.008771</td>\n",
-       "      <td>-19.815932</td>\n",
-       "      <td>79.772716</td>\n",
-       "      <td>7.525833</td>\n",
-       "      <td>1450.438131</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>2004-01-01 00:03:00</td>\n",
-       "      <td>664.536407</td>\n",
-       "      <td>-1282.259404</td>\n",
-       "      <td>-134.006218</td>\n",
-       "      <td>-19.815932</td>\n",
-       "      <td>80.335768</td>\n",
-       "      <td>7.525833</td>\n",
-       "      <td>1450.432860</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>2004-01-01 00:04:00</td>\n",
-       "      <td>664.533404</td>\n",
-       "      <td>-1282.255265</td>\n",
-       "      <td>-134.003670</td>\n",
-       "      <td>-19.815932</td>\n",
-       "      <td>80.898819</td>\n",
-       "      <td>7.525833</td>\n",
-       "      <td>1450.427589</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7209352</th>\n",
-       "      <td>7209352</td>\n",
-       "      <td>2017-09-15 11:52:00</td>\n",
-       "      <td>-0.092238</td>\n",
-       "      <td>0.399237</td>\n",
-       "      <td>0.032108</td>\n",
-       "      <td>2.168796</td>\n",
-       "      <td>157.198413</td>\n",
-       "      <td>6.909167</td>\n",
-       "      <td>0.411010</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7209353</th>\n",
-       "      <td>7209353</td>\n",
-       "      <td>2017-09-15 11:53:00</td>\n",
-       "      <td>-0.115321</td>\n",
-       "      <td>0.401941</td>\n",
-       "      <td>0.042341</td>\n",
-       "      <td>2.325404</td>\n",
-       "      <td>154.503713</td>\n",
-       "      <td>7.126389</td>\n",
-       "      <td>0.420295</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7209354</th>\n",
-       "      <td>7209354</td>\n",
-       "      <td>2017-09-15 11:54:00</td>\n",
-       "      <td>-0.138326</td>\n",
-       "      <td>0.404378</td>\n",
-       "      <td>0.052547</td>\n",
-       "      <td>2.467676</td>\n",
-       "      <td>151.956936</td>\n",
-       "      <td>7.333611</td>\n",
-       "      <td>0.430600</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7209355</th>\n",
-       "      <td>7209355</td>\n",
-       "      <td>2017-09-15 11:55:00</td>\n",
-       "      <td>-0.161239</td>\n",
-       "      <td>0.406547</td>\n",
-       "      <td>0.062719</td>\n",
-       "      <td>2.596060</td>\n",
-       "      <td>149.561459</td>\n",
-       "      <td>7.530833</td>\n",
-       "      <td>0.441828</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7209356</th>\n",
-       "      <td>7209356</td>\n",
-       "      <td>2017-09-15 11:56:00</td>\n",
-       "      <td>-0.184044</td>\n",
-       "      <td>0.408446</td>\n",
-       "      <td>0.072851</td>\n",
-       "      <td>2.711243</td>\n",
-       "      <td>147.317501</td>\n",
-       "      <td>7.718056</td>\n",
-       "      <td>0.453881</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>7209357 rows × 9 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         datetime      Universal Time       x_ksm        y_ksm       z_ksm  \\\n",
-       "0               0 2004-01-01 00:00:00  664.545415 -1282.271820 -134.013894   \n",
-       "1               1 2004-01-01 00:01:00  664.542412 -1282.267682 -134.011330   \n",
-       "2               2 2004-01-01 00:02:00  664.539410 -1282.263543 -134.008771   \n",
-       "3               3 2004-01-01 00:03:00  664.536407 -1282.259404 -134.006218   \n",
-       "4               4 2004-01-01 00:04:00  664.533404 -1282.255265 -134.003670   \n",
-       "...           ...                 ...         ...          ...         ...   \n",
-       "7209352   7209352 2017-09-15 11:52:00   -0.092238     0.399237    0.032108   \n",
-       "7209353   7209353 2017-09-15 11:53:00   -0.115321     0.401941    0.042341   \n",
-       "7209354   7209354 2017-09-15 11:54:00   -0.138326     0.404378    0.052547   \n",
-       "7209355   7209355 2017-09-15 11:55:00   -0.161239     0.406547    0.062719   \n",
-       "7209356   7209356 2017-09-15 11:56:00   -0.184044     0.408446    0.072851   \n",
-       "\n",
-       "            subLat      subLon    subLST        R_ksm  \n",
-       "0       -19.815933   78.646614  7.525833  1450.448673  \n",
-       "1       -19.815933   79.209665  7.525833  1450.443402  \n",
-       "2       -19.815932   79.772716  7.525833  1450.438131  \n",
-       "3       -19.815932   80.335768  7.525833  1450.432860  \n",
-       "4       -19.815932   80.898819  7.525833  1450.427589  \n",
-       "...            ...         ...       ...          ...  \n",
-       "7209352   2.168796  157.198413  6.909167     0.411010  \n",
-       "7209353   2.325404  154.503713  7.126389     0.420295  \n",
-       "7209354   2.467676  151.956936  7.333611     0.430600  \n",
-       "7209355   2.596060  149.561459  7.530833     0.441828  \n",
-       "7209356   2.711243  147.317501  7.718056     0.453881  \n",
-       "\n",
-       "[7209357 rows x 9 columns]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_ephemeris = pd.read_csv(ephemeris_fp)\n",
     "df_ephemeris = df_ephemeris.rename(columns={'start': 'Universal Time'})  # Rename datetime column to Universal Time\n",
@@ -715,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -731,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1124,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1152,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1169,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1204,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1240,7 +1037,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Saturn_LFEs",
+   "display_name": "Saturn_LFEs_test",
    "language": "python",
    "name": "python3"
   },
