Jupyter notebooks run and minor debugging

--- a/fig5_rho_z_map/fig5_rho_z_map.ipynb
+++ b/fig5_rho_z_map/fig5_rho_z_map.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "53b45dc7",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "d2621ba5",
    "metadata": {},
    "outputs": [
@@ -255,7 +255,7 @@
        "[4553 rows x 10 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "485eeb92",
    "metadata": {},
    "outputs": [
@@ -476,7 +476,7 @@
        "1767   6.704054  25.366681  11.931667   7.521793  293580.0  24.464754  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "acc28db8",
    "metadata": {},
    "outputs": [
@@ -715,7 +715,7 @@
        "[76 rows x 10 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "feccbea0",
    "metadata": {},
    "outputs": [
@@ -843,7 +843,7 @@
        "252 -31.122909  87.957555  5.149444 -20.607331  127080.0  82.267223  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -863,19 +863,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "3532c9dc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ephemeris = pd.read_csv('../data/calculated/20040101000000_20170915115700_ephemeris.csv', usecols=['x_KSM', 'y_KSM', 'z_KSM'])\n",
+    "ephemeris = pd.read_csv('../data/calculated/20040101000000_20170915115700_ephemeris.csv', usecols=['x_ksm', 'y_ksm', 'z_ksm'])\n",
     "\n",
-    "ephemeris['rho'] = np.sqrt(ephemeris['x_KSM']**2 + ephemeris['y_KSM']**2)"
+    "ephemeris['rho'] = np.sqrt(ephemeris['x_ksm']**2 + ephemeris['y_ksm']**2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "53ab1000",
    "metadata": {},
    "outputs": [
@@ -883,9 +883,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/j9/q8hqts053r57j7y11x4bv2_c0000gn/T/ipykernel_33038/3756912143.py:16: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "/var/folders/j9/q8hqts053r57j7y11x4bv2_c0000gn/T/ipykernel_64618/464367669.py:16: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "  lfe_counts = lfes.groupby(['z_bins', 'rho_bins']).size()\n",
-      "/var/folders/j9/q8hqts053r57j7y11x4bv2_c0000gn/T/ipykernel_33038/3756912143.py:25: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "/var/folders/j9/q8hqts053r57j7y11x4bv2_c0000gn/T/ipykernel_64618/464367669.py:25: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "  eph_counts = ephemeris.groupby(['z_bins', 'rho_bins']).size()\n"
      ]
     }
@@ -912,7 +912,7 @@
     "## Repeat for ephemeris data\n",
     "# Bin the data\n",
     "ephemeris['rho_bins'] = pd.cut(ephemeris['rho'], bins=rho_bins)\n",
-    "ephemeris['z_bins'] = pd.cut(ephemeris['z_KSM'], bins=z_bins)\n",
+    "ephemeris['z_bins'] = pd.cut(ephemeris['z_ksm'], bins=z_bins)\n",
     "\n",
     "# Create mapped data, ready to plot\n",
     "eph_counts = ephemeris.groupby(['z_bins', 'rho_bins']).size()\n",
@@ -929,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "2cb99500",
    "metadata": {},
    "outputs": [
@@ -939,7 +939,7 @@
        "(-50.0, 50.0)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -968,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "a709cecc",
    "metadata": {},
    "outputs": [],
@@ -981,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "3bf6a58a",
    "metadata": {},
    "outputs": [
@@ -989,7 +989,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/j9/q8hqts053r57j7y11x4bv2_c0000gn/T/ipykernel_33038/1967998741.py:7: MatplotlibDeprecationWarning: The get_cmap function was deprecated in Matplotlib 3.7 and will be removed in 3.11. Use ``matplotlib.colormaps[name]`` or ``matplotlib.colormaps.get_cmap()`` or ``pyplot.get_cmap()`` instead.\n",
+      "/var/folders/j9/q8hqts053r57j7y11x4bv2_c0000gn/T/ipykernel_64618/1967998741.py:7: MatplotlibDeprecationWarning: The get_cmap function was deprecated in Matplotlib 3.7 and will be removed in 3.11. Use ``matplotlib.colormaps[name]`` or ``matplotlib.colormaps.get_cmap()`` or ``pyplot.get_cmap()`` instead.\n",
       "  my_cmap = copy.copy(mp_cm.get_cmap('inferno')) # copy the default cmap\n"
      ]
     },
@@ -1027,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "3838ca99",
    "metadata": {},
    "outputs": [
@@ -1063,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "123934d4",
    "metadata": {},
    "outputs": [
@@ -1110,7 +1110,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Saturn_LFEs",
+   "display_name": "Saturn_LFEs_test",
    "language": "python",
    "name": "python3"
   },
