--- a/fig1_delta_t/fig1_delta_t.ipynb
+++ b/fig1_delta_t/fig1_delta_t.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "582ec5b3",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "d771259e",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "707410fe",
    "metadata": {},
    "outputs": [
@@ -38,7 +38,7 @@
      "text": [
       "<>:21: SyntaxWarning: invalid escape sequence '\\D'\n",
       "<>:21: SyntaxWarning: invalid escape sequence '\\D'\n",
-      "/var/folders/j9/q8hqts053r57j7y11x4bv2_c0000gn/T/ipykernel_31910/2886494937.py:21: SyntaxWarning: invalid escape sequence '\\D'\n",
+      "/var/folders/j9/q8hqts053r57j7y11x4bv2_c0000gn/T/ipykernel_60782/2927427220.py:21: SyntaxWarning: invalid escape sequence '\\D'\n",
       "  ax.set_xlabel('$\\Delta$T between successive LFEs (minutes)',fontsize=20)\n"
      ]
     }
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "e472dc36",
    "metadata": {},
    "outputs": [
@@ -1154,7 +1154,7 @@
        "  ...])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1166,7 +1166,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Saturn_LFEs",
+   "display_name": "Saturn_LFEs_test",
    "language": "python",
    "name": "python3"
   },
