--- a/fig2_two_spectrograms/fig2_two_spectrograms.ipynb
+++ b/fig2_two_spectrograms/fig2_two_spectrograms.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "id": "4c3b3e2b",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "id": "4acc9469",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "fa58230d",
    "metadata": {},
    "outputs": [],
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "994e3130",
    "metadata": {},
    "outputs": [],
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "id": "ca1e4b1e",
    "metadata": {},
    "outputs": [],
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "id": "9f4a8ad2",
    "metadata": {},
    "outputs": [],
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "bfd8c0fb",
    "metadata": {},
    "outputs": [],
@@ -239,7 +239,7 @@
     "data_start = pd.Timestamp('2004-02-21')\n",
     "data_end = pd.Timestamp('2004-02-22')\n",
     "\n",
-    "polygon_fp = '../data/raw/unet_output/2004001_2017258_catalogue.json'\n",
+    "polygon_fp = '../data/raw/2004001_2017258_catalogue.json'\n",
     "lfe_detections_fp =  '../data/calculated/lfe_detections_unet.csv'\n",
     "lfe_joined_fp = '../data/calculated/LFEs_joined.csv'\n",
     "\n",
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "id": "818e24a9",
    "metadata": {},
    "outputs": [
@@ -269,9 +269,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/j9/q8hqts053r57j7y11x4bv2_c0000gn/T/ipykernel_42010/2816952563.py:49: UserWarning: Adding colorbar to a different Figure <Figure size 1000x800 with 3 Axes> than <Figure size 640x480 with 0 Axes> which fig.colorbar is called on.\n",
+      "/var/folders/j9/q8hqts053r57j7y11x4bv2_c0000gn/T/ipykernel_62236/2816952563.py:49: UserWarning: Adding colorbar to a different Figure <Figure size 1000x800 with 3 Axes> than <Figure size 640x480 with 0 Axes> which fig.colorbar is called on.\n",
       "  cb = fig.colorbar(im, extend='both', shrink=0.9, cax=cax, ax=ax)\n",
-      "/var/folders/j9/q8hqts053r57j7y11x4bv2_c0000gn/T/ipykernel_42010/2816952563.py:49: UserWarning: Adding colorbar to a different Figure <Figure size 1000x800 with 4 Axes> than <Figure size 640x480 with 0 Axes> which fig.colorbar is called on.\n",
+      "/var/folders/j9/q8hqts053r57j7y11x4bv2_c0000gn/T/ipykernel_62236/2816952563.py:49: UserWarning: Adding colorbar to a different Figure <Figure size 1000x800 with 4 Axes> than <Figure size 640x480 with 0 Axes> which fig.colorbar is called on.\n",
       "  cb = fig.colorbar(im, extend='both', shrink=0.9, cax=cax, ax=ax)\n"
      ]
     },
@@ -549,7 +549,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Saturn_LFEs",
+   "display_name": "Saturn_LFEs_test",
    "language": "python",
    "name": "python3"
   },
