--- a/fig3_lfe_duration/fig3_lfe_duration.ipynb
+++ b/fig3_lfe_duration/fig3_lfe_duration.ipynb
@@ -104,7 +104,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Saturn_LFEs",
+   "display_name": "Saturn_LFEs_test",
    "language": "python",
    "name": "python3"
   },
