--- a/fig_avg_spectrograms/avg_spectrograms_all_data.ipynb
+++ b/fig_avg_spectrograms/avg_spectrograms_all_data.ipynb
@@ -497,25 +497,208 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'Universal Time'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/.pyenv/versions/Saturn_LFEs_test/lib/python3.13/site-packages/pandas/core/indexes/base.py:3812\u001b[39m, in \u001b[36mIndex.get_loc\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   3811\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m3812\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_engine\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   3813\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/index.pyx:167\u001b[39m, in \u001b[36mpandas._libs.index.IndexEngine.get_loc\u001b[39m\u001b[34m()\u001b[39m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/index.pyx:196\u001b[39m, in \u001b[36mpandas._libs.index.IndexEngine.get_loc\u001b[39m\u001b[34m()\u001b[39m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/hashtable_class_helper.pxi:7088\u001b[39m, in \u001b[36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[39m\u001b[34m()\u001b[39m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/hashtable_class_helper.pxi:7096\u001b[39m, in \u001b[36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[39m\u001b[34m()\u001b[39m\n",
-      "\u001b[31mKeyError\u001b[39m: 'Universal Time'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m df_ephemeris = pd.read_csv(ephemeris_fp)\n\u001b[32m      2\u001b[39m df_ephemeris = df_ephemeris.rename(columns={\u001b[33m'\u001b[39m\u001b[33mstart\u001b[39m\u001b[33m'\u001b[39m: \u001b[33m'\u001b[39m\u001b[33mUniversal Time\u001b[39m\u001b[33m'\u001b[39m})  \u001b[38;5;66;03m# Rename datetime column to Universal Time\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m df_ephemeris[\u001b[33m\"\u001b[39m\u001b[33mUniversal Time\u001b[39m\u001b[33m\"\u001b[39m] = np.array(\u001b[43mdf_ephemeris\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mUniversal Time\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m, dtype=\u001b[33m'\u001b[39m\u001b[33mdatetime64\u001b[39m\u001b[33m'\u001b[39m)  \u001b[38;5;66;03m# Convert strings to datetime64 format\u001b[39;00m\n\u001b[32m      4\u001b[39m df_ephemeris\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/.pyenv/versions/Saturn_LFEs_test/lib/python3.13/site-packages/pandas/core/frame.py:4107\u001b[39m, in \u001b[36mDataFrame.__getitem__\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   4105\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.columns.nlevels > \u001b[32m1\u001b[39m:\n\u001b[32m   4106\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._getitem_multilevel(key)\n\u001b[32m-> \u001b[39m\u001b[32m4107\u001b[39m indexer = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   4108\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[32m   4109\u001b[39m     indexer = [indexer]\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/.pyenv/versions/Saturn_LFEs_test/lib/python3.13/site-packages/pandas/core/indexes/base.py:3819\u001b[39m, in \u001b[36mIndex.get_loc\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   3814\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[32m   3815\u001b[39m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc.Iterable)\n\u001b[32m   3816\u001b[39m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[32m   3817\u001b[39m     ):\n\u001b[32m   3818\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[32m-> \u001b[39m\u001b[32m3819\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01merr\u001b[39;00m\n\u001b[32m   3820\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[32m   3821\u001b[39m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[32m   3822\u001b[39m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[32m   3823\u001b[39m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[32m   3824\u001b[39m     \u001b[38;5;28mself\u001b[39m._check_indexing_error(key)\n",
-      "\u001b[31mKeyError\u001b[39m: 'Universal Time'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>datetime</th>\n",
+       "      <th>Universal Time</th>\n",
+       "      <th>x_ksm</th>\n",
+       "      <th>y_ksm</th>\n",
+       "      <th>z_ksm</th>\n",
+       "      <th>subLat</th>\n",
+       "      <th>subLon</th>\n",
+       "      <th>subLST</th>\n",
+       "      <th>R_ksm</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2004-01-01 00:00:00</td>\n",
+       "      <td>664.545415</td>\n",
+       "      <td>-1282.271820</td>\n",
+       "      <td>-134.013894</td>\n",
+       "      <td>-19.815933</td>\n",
+       "      <td>78.646614</td>\n",
+       "      <td>7.525833</td>\n",
+       "      <td>1450.448673</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2004-01-01 00:01:00</td>\n",
+       "      <td>664.542412</td>\n",
+       "      <td>-1282.267682</td>\n",
+       "      <td>-134.011330</td>\n",
+       "      <td>-19.815933</td>\n",
+       "      <td>79.209665</td>\n",
+       "      <td>7.525833</td>\n",
+       "      <td>1450.443402</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2004-01-01 00:02:00</td>\n",
+       "      <td>664.539410</td>\n",
+       "      <td>-1282.263543</td>\n",
+       "      <td>-134.008771</td>\n",
+       "      <td>-19.815932</td>\n",
+       "      <td>79.772716</td>\n",
+       "      <td>7.525833</td>\n",
+       "      <td>1450.438131</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2004-01-01 00:03:00</td>\n",
+       "      <td>664.536407</td>\n",
+       "      <td>-1282.259404</td>\n",
+       "      <td>-134.006218</td>\n",
+       "      <td>-19.815932</td>\n",
+       "      <td>80.335768</td>\n",
+       "      <td>7.525833</td>\n",
+       "      <td>1450.432860</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2004-01-01 00:04:00</td>\n",
+       "      <td>664.533404</td>\n",
+       "      <td>-1282.255265</td>\n",
+       "      <td>-134.003670</td>\n",
+       "      <td>-19.815932</td>\n",
+       "      <td>80.898819</td>\n",
+       "      <td>7.525833</td>\n",
+       "      <td>1450.427589</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7209352</th>\n",
+       "      <td>7209352</td>\n",
+       "      <td>2017-09-15 11:52:00</td>\n",
+       "      <td>-0.092238</td>\n",
+       "      <td>0.399237</td>\n",
+       "      <td>0.032108</td>\n",
+       "      <td>2.168796</td>\n",
+       "      <td>157.198413</td>\n",
+       "      <td>6.909167</td>\n",
+       "      <td>0.411010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7209353</th>\n",
+       "      <td>7209353</td>\n",
+       "      <td>2017-09-15 11:53:00</td>\n",
+       "      <td>-0.115321</td>\n",
+       "      <td>0.401941</td>\n",
+       "      <td>0.042341</td>\n",
+       "      <td>2.325404</td>\n",
+       "      <td>154.503713</td>\n",
+       "      <td>7.126389</td>\n",
+       "      <td>0.420295</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7209354</th>\n",
+       "      <td>7209354</td>\n",
+       "      <td>2017-09-15 11:54:00</td>\n",
+       "      <td>-0.138326</td>\n",
+       "      <td>0.404378</td>\n",
+       "      <td>0.052547</td>\n",
+       "      <td>2.467676</td>\n",
+       "      <td>151.956936</td>\n",
+       "      <td>7.333611</td>\n",
+       "      <td>0.430600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7209355</th>\n",
+       "      <td>7209355</td>\n",
+       "      <td>2017-09-15 11:55:00</td>\n",
+       "      <td>-0.161239</td>\n",
+       "      <td>0.406547</td>\n",
+       "      <td>0.062719</td>\n",
+       "      <td>2.596060</td>\n",
+       "      <td>149.561459</td>\n",
+       "      <td>7.530833</td>\n",
+       "      <td>0.441828</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7209356</th>\n",
+       "      <td>7209356</td>\n",
+       "      <td>2017-09-15 11:56:00</td>\n",
+       "      <td>-0.184044</td>\n",
+       "      <td>0.408446</td>\n",
+       "      <td>0.072851</td>\n",
+       "      <td>2.711243</td>\n",
+       "      <td>147.317501</td>\n",
+       "      <td>7.718056</td>\n",
+       "      <td>0.453881</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>7209357 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         datetime      Universal Time       x_ksm        y_ksm       z_ksm  \\\n",
+       "0               0 2004-01-01 00:00:00  664.545415 -1282.271820 -134.013894   \n",
+       "1               1 2004-01-01 00:01:00  664.542412 -1282.267682 -134.011330   \n",
+       "2               2 2004-01-01 00:02:00  664.539410 -1282.263543 -134.008771   \n",
+       "3               3 2004-01-01 00:03:00  664.536407 -1282.259404 -134.006218   \n",
+       "4               4 2004-01-01 00:04:00  664.533404 -1282.255265 -134.003670   \n",
+       "...           ...                 ...         ...          ...         ...   \n",
+       "7209352   7209352 2017-09-15 11:52:00   -0.092238     0.399237    0.032108   \n",
+       "7209353   7209353 2017-09-15 11:53:00   -0.115321     0.401941    0.042341   \n",
+       "7209354   7209354 2017-09-15 11:54:00   -0.138326     0.404378    0.052547   \n",
+       "7209355   7209355 2017-09-15 11:55:00   -0.161239     0.406547    0.062719   \n",
+       "7209356   7209356 2017-09-15 11:56:00   -0.184044     0.408446    0.072851   \n",
+       "\n",
+       "            subLat      subLon    subLST        R_ksm  \n",
+       "0       -19.815933   78.646614  7.525833  1450.448673  \n",
+       "1       -19.815933   79.209665  7.525833  1450.443402  \n",
+       "2       -19.815932   79.772716  7.525833  1450.438131  \n",
+       "3       -19.815932   80.335768  7.525833  1450.432860  \n",
+       "4       -19.815932   80.898819  7.525833  1450.427589  \n",
+       "...            ...         ...       ...          ...  \n",
+       "7209352   2.168796  157.198413  6.909167     0.411010  \n",
+       "7209353   2.325404  154.503713  7.126389     0.420295  \n",
+       "7209354   2.467676  151.956936  7.333611     0.430600  \n",
+       "7209355   2.596060  149.561459  7.530833     0.441828  \n",
+       "7209356   2.711243  147.317501  7.718056     0.453881  \n",
+       "\n",
+       "[7209357 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -534,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -923,7 +1106,7 @@
        "[2403119 rows x 58 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -943,16 +1126,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/j9/q8hqts053r57j7y11x4bv2_c0000gn/T/ipykernel_79884/1511130122.py:1: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "/var/folders/j9/q8hqts053r57j7y11x4bv2_c0000gn/T/ipykernel_59235/1511130122.py:1: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "  df_mean = df_all.groupby('local_time').mean()\n",
-      "/var/folders/j9/q8hqts053r57j7y11x4bv2_c0000gn/T/ipykernel_79884/1511130122.py:2: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "/var/folders/j9/q8hqts053r57j7y11x4bv2_c0000gn/T/ipykernel_59235/1511130122.py:2: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "  df_median = df_all.groupby('local_time').median()\n"
      ]
     }
@@ -971,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -988,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1023,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
