--- a/fig_avg_spectrograms/polygon_over_flux.ipynb
+++ b/fig_avg_spectrograms/polygon_over_flux.ipynb
@@ -10,21 +10,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from datetime import datetime\n",
     "import numpy as np\n",
     "\n",
+    "from scipy.io import readsav\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.colors as mp_colors\n",
     "import matplotlib.dates as mdates\n",
     "from matplotlib.patches import Polygon\n",
     "\n",
-    "from tfcat import TFCat\n",
+    "from tfcat import TFCat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_sav_data(year):\n",
+    "    \"\"\"Select sav data for a chosen year.\n",
+    "    \n",
+    "    Parses through an SKR year file to obtain the time, frequency and flux data.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    year: int or str\n",
+    "        Year of the file wanted.\n",
+    "    \n",
+    "    Returns\n",
+    "    -------\n",
+    "    time: numpy.array\n",
+    "        Time series in 3 minute step.\n",
     "\n",
-    "from lfe_func import get_sav_data"
+    "    freq: numpy.array\n",
+    "        Midpoint values of Cassini frequency bins.\n",
+    "\n",
+    "    flux: numpy.array (freq.shape, time.shape)\n",
+    "        Magnetic flux values for the chosen year.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    skr_raw_fp = '../data/raw/SKR_raw'\n",
+    "\n",
+    "    file_skr = skr_raw_fp + f'/SKR_{year}_CJ.sav'\n",
+    "    raw_skr = readsav(file_skr)\n",
+    "    flux, time_doy, freq = raw_skr['s'].copy(), raw_skr['t'], raw_skr['f']\n",
+    "    flux[flux == 0] = np.nan  # replace 0 with nans\n",
+    "\n",
+    "    time = (time_doy * 24 * 3600).astype('timedelta64[s]') + np.datetime64('1997') - np.timedelta64(1, 'D') + np.timedelta64(1, 's') # SAV time correction\n",
+    "    time = time.astype('datetime64[m]')\n",
+    "    time = time.astype('datetime64[s]')\n",
+    "\n",
+    "    return time, freq, flux"
    ]
   },
   {
@@ -36,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +207,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Saturn_LFEs",
+   "display_name": "Saturn_LFEs_test",
    "language": "python",
    "name": "python3"
   },
