--- a/fig_ppo/fig_ppo.ipynb
+++ b/fig_ppo/fig_ppo.ipynb
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,18 +426,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/j9/q8hqts053r57j7y11x4bv2_c0000gn/T/ipykernel_73232/2302286000.py:2: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "/var/folders/j9/q8hqts053r57j7y11x4bv2_c0000gn/T/ipykernel_60626/2302286000.py:2: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "  phase_counts = selected_lfes.groupby(['north_bins', 'south_bins']).size()\n",
-      "/var/folders/j9/q8hqts053r57j7y11x4bv2_c0000gn/T/ipykernel_73232/2302286000.py:3: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "/var/folders/j9/q8hqts053r57j7y11x4bv2_c0000gn/T/ipykernel_60626/2302286000.py:3: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "  n_counts = selected_lfes.groupby('north_bins').size().to_numpy()\n",
-      "/var/folders/j9/q8hqts053r57j7y11x4bv2_c0000gn/T/ipykernel_73232/2302286000.py:4: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "/var/folders/j9/q8hqts053r57j7y11x4bv2_c0000gn/T/ipykernel_60626/2302286000.py:4: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "  s_counts = selected_lfes.groupby('south_bins').size().to_numpy()\n"
      ]
     }
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +564,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Saturn_LFEs",
+   "display_name": "Saturn_LFEs_test",
    "language": "python",
    "name": "python3"
   },
